started working on project

--- a/projekt/skola/templates/students-index.html
+++ b/projekt/skola/templates/students-index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="row">
-<div class="col-lg-2">
+<div class="col-2">
 <div class="nav-side-menu">
     <div class="brand"> <img class="logo" src="{% static 'images/vsb.png' %}" alt="vsb" style="height:150px"> </div>
     <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
@@ -55,7 +55,7 @@
      </div>
 </div>
 </div>
-<div class="col-lg-10">
+<div class="col-10">
 <table class="table">
   <thead>
     <tr>
